# -9-

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_p4_wifi.cmd  capture_p4_full_log.py  check_mpu_live.py  check_p4_after_flash.py  deploy_cloud.py  fix_cloud_service.py  inspect_server_events.py  pc_realtime_monitor.py  send_danger_test.py  tail_cloud_log.py  test_cloud_upload.py  verify_alarm_flow.py  verify_p4_runtime.py
BrainLinkParser-Python/: brainlink_pc_to_p4_bridge.py  brainlink_raw_probe.py
bodyguard_esp32_p4/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.pre_hosted_backup  server.py
bodyguard_esp32_p4/cmake/: package_manager.cmake
bodyguard_esp32_p4/main/: CMakeLists.txt  adaptive_learning.c  adaptive_learning.h  ai_feedback_parser.c  ai_feedback_parser.h  audio_alert.c  audio_alert.h  ble.c  ble.h  bodyguard_config.h  bodyguard_private_config.example.h  camera_ring.c  camera_ring.h  data_def.h  eeg.c  eeg.h  eeg_trend.c  eeg_trend.h  event_capture.c  event_capture.h  event_queue.c  event_queue.h  event_router.c  event_router.h  idf_component.yml  learning_loop_engine.c  learning_loop_engine.h  learning_storage.c  learning_storage.h  learning_types.h  main.c  mjpeg_stream.c  mjpeg_stream.h  pc_eeg_bridge.c  pc_eeg_bridge.h  pose_trend.c  pose_trend.h  risk_engine.c  risk_engine.h  sensor.c  (+11 more)
bodyguard_esp32_p4/main/camera_cfg/: ov5647_bodyguard_bright.json
bodyguard_esp32_p4/tools/: generate_voice_assets.py
brainlink_wroom_gateway/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
brainlink_wroom_gateway/main/: CMakeLists.txt  main.c
cloud_server/: README.md  app.py  requirements.txt
config/: TUYA_T5AI_BOARD_LCD_3.5_CAMERA.config  TUYA_T5AI_CORE.config
esp-video-components-temp/esp_cam_sensor/sensors/lt6911/fw/: LT6911D_v1_default.hex
esp-video-components-temp/esp_cam_sensor/sensors/ov5647/: ov5647.c
hosted_probe/host_nimble_bleprph_host_only_vhci/: README.md  sdkconfig
hosted_probe/host_nimble_bleprph_host_only_vhci/main/: idf_component.yml
main/: alert.c  app_state.c  ble_client.c  data_def.h  main.c  ui.c
src/: app_cli_cmd.c  log.c  tuya_app_main.c
(+3 files in other folders)
